kube-manifestfiles/ALB-with-EKS/Ingress-groups/user-create-micro-service/user-create-micro-service.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: user-create-service-deployment
  labels:
    app: user-create-micro-servcie
    tier: backend
  namespace: usermgmt-ns

spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-create-micro-servcie
      tier: backend
  template:
    metadata:
      labels:
        app: user-create-micro-servcie
        tier: backend
    spec:
      serviceAccountName: usermgmt-sa
      containers:
        - name: user-create-micro-servcie
          image: rudragajjala/user-create-service:1.0.0
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: user-create-secret-inline
              mountPath: "/mnt/secrets-store"
              readOnly: true
      volumes:
        - name: user-create-secret-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "user-mgmt-secrets"

---
apiVersion: v1
kind: Service

metadata:
  name: user-create-nodeport-service
  labels:
    app: user-create-micro-servcie
    tier: backend
  namespace: usermgmt-ns
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /create/health

spec:
  type: NodePort
  selector:
    app: user-create-micro-servcie
    tier: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
