kube-manifestfiles/ALB-with-EKS/Ingress-groups/user-create-micro-service/user-create-micro-servcie-alb-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: user-create-alb-ingress
  labels:
    app: user-create-alb-ingress
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: usermgmt-app-alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    #alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: usermgmt-app
    alb.ingress.kubernetes.io/group.order: '10'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/healthcheck-protocol: http
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    #alb.ingress.kubernetes.io/certificate-arn: XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
    alb.ingress.kubernetes.io/actions.ssl-redirect: '443'
    external-dns.alpha.kubernetes.io/hostname: usermgmtapi.devopspedia.online

spec:
  ingressClassName: aws-alb-ingress-class
  rules:
    - http:
        paths:
          - path: /create
            pathType: Prefix
            backend:
              service:
                name: user-create-micro-service
                port:
                  number: 80
